--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -167,7 +167,7 @@
             <strong>Acoustic</strong>
           </h5>
           <ul>
-            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>Master Handbook of Acoustics</b></i></a></li>
+            <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/Master_Handbook_of_Acoustics_5th_Edition_(2009)_(Everest).pdf"><i><b>Master Handbook of Acoustics (2099)</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/acoustics-for-engineers-2nd_troy-lectures.pdf"><i><b>Acoustics for Engineers</b></i></a></li>
             <li><a href="https://www.gabrielavelitch.com/downloads/acoustic/tesi_giordano.pdf"><i><b>M. Giordano - "Modellazione e Simulazione del Campo Acustico in Cavità a Geometria e Caratteristiche Acustiche Variabili" (1996)</b></i></a></li>
             <li><a href="http://www.angelofarina.it/Public/Fisica-Tecnica-Ambientale-2015/Lez-07/Cap.1_AcusticaInEdilizia.pdf"><i><b>A. Farina - Principi Base di Acustica, capitolo 1</b></i></a></li>
@@ -181,8 +181,7 @@
             <strong>Automotive</strong>
           </h5>
           <ul>
-            <li><a href="https://www.academia.edu/4958143/SUBJECTIVE_COMPARISON_BETWEEN_STEREO_DIPOLE_AND_3D_AMBISONIC_SURROUND_SYSTEMS_FOR_AUTOMOTIVE_APPLICATIONS"><i><b>A. Farina, E. Ugolotti - "Subjective comparison between Stereo Dipole and 3D
-                    Ambisonics surround systems for automotive applications"</b></i></a></li>
+            <li><a href="https://www.academia.edu/4958143/SUBJECTIVE_COMPARISON_BETWEEN_STEREO_DIPOLE_AND_3D_AMBISONIC_SURROUND_SYSTEMS_FOR_AUTOMOTIVE_APPLICATIONS"><i><b>A. Farina, E. Ugolotti - "Subjective comparison between Stereo Dipole and 3D Ambisonics surround systems for automotive applications" (1999)</b></i></a></li>
             <li><a href="https://corporate.bang-olufsen.com/it/partners/automotive"><i><b>C. Guastavino, V. Larcher, G. Catusseau, P. Boussard - "Spatial Audio Quality Evaluation: Comparing Transaural, Ambisonics and Stereo" (2007)</b></i></a></li>
             <li><a href="https://hal.science/hal-03456711/file/I3DA_SpatialSoundDesign_DUPRE_FinalSubmission.pdf"><i><b>T. Dupré, S. Denjean, M. Aramaki, R. Kronland-Martinet - "Spatial Sound Design in a Car Cockpit: Challenges and Perspectives"
                     (2021)</b></i></a></li>
