--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -292,7 +292,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
-                <img src="https://www.gabrielavelitch.com/img/site/wind.svg" style="width:70%">
+                <img src="https://www.gabrielavelitch.com/img/site/wind.svg" style="width:70%; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Physical</strong>
@@ -333,7 +333,7 @@
                 <img src="https://www.gabrielavelitch.com/img/site/electric.svg">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
-                <strong>Electrical</strong><br><br><br><br><br><br><br><br><br><br><strong>Styles</strong><br><strong><br></strong>
+                <strong>Electrical</strong>
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7">
               <ul>
