--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -297,7 +297,7 @@
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Physical</strong>
               </h4>
-              <p class="mbr-text card-text mbr-fonts-style display-7">
+              <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
               <ul>
                 <li>Aerodynamic noise</li>
                 <li>Tier/road</li>
@@ -315,7 +315,7 @@
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Mechanical</strong>
               </h4>
-              <p class="mbr-text card-text mbr-fonts-style display-7">
+              <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
               <ul>
                 <li>ICE engine system</li>
                 <li>Air-conditioning</li>
@@ -335,7 +335,7 @@
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Electrical</strong>
               </h4>
-              <p class="mbr-text card-text mbr-fonts-style display-7">
+              <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
               <ul>
                 <li>EV engine system</li>
                 <li>Battery cooling</li>
