--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -297,8 +297,8 @@
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Physical</strong>
               </h4>
-              <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
-              <ul>
+              <p>
+              <ul class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
                 <li>Aerodynamic noise</li>
                 <li>Tier/road</li>
               </ul>
@@ -315,8 +315,8 @@
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Mechanical</strong>
               </h4>
-              <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
-              <ul>
+              <p>
+              <ul class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
                 <li>ICE engine system</li>
                 <li>Air-conditioning</li>
                 <li>Doors opening</li>
@@ -335,8 +335,8 @@
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Electrical</strong>
               </h4>
-              <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
-              <ul>
+              <p>
+              <ul class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
                 <li>EV engine system</li>
                 <li>Battery cooling</li>
                 <br>
