--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -310,7 +310,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
-                <img src="https://www.gabrielavelitch.com/img/site/mechanical.svg">
+                <img src="https://www.gabrielavelitch.com/img/site/mechanical.svg" style="width:70%; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Mechanical</strong>
@@ -330,7 +330,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
-                <img src="https://www.gabrielavelitch.com/img/site/electric.svg">
+                <img src="https://www.gabrielavelitch.com/img/site/electric.svg" style="width:70%; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Electrical</strong>
