--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -190,9 +190,9 @@
     <div class="container-fluid">
       <div class="row justify-content-center">
         <div class="col-12 col-lg-5">
-          <div class="image-wrapper">
+          <span>
             <img src="https://www.gabrielavelitch.com/img/site/idea.webp" style="width:20%; align-items: center">
-          </div>
+          </span>
         </div>
       </div>
     </div>
