--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -191,7 +191,7 @@
       <div class="row justify-content-center">
         <div class="col-12 col-lg-5">
           <span>
-            <img src="https://www.gabrielavelitch.com/img/site/idea.webp" style="width:20%; align-items: center">
+            <img src="https://www.gabrielavelitch.com/img/site/idea.webp" style="width:20%; display: inline; align-items: center">
           </span>
         </div>
       </div>
@@ -302,7 +302,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
-                <img src="https://www.gabrielavelitch.com/img/site/wind.svg" style="width:70%; align-items: center">
+                <img src="https://www.gabrielavelitch.com/img/site/wind.svg" style="width:70%; display: inline; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Physical</strong>
@@ -322,7 +322,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
-                <img src="https://www.gabrielavelitch.com/img/site/mechanical.svg" style="width:70%; align-items: center">
+                <img src="https://www.gabrielavelitch.com/img/site/mechanical.svg" style="width:70%; display: inline; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Mechanical</strong>
@@ -342,7 +342,7 @@
           <div class="card-wrapper">
             <div class="card-box align-center">
               <span>
-                <img src="https://www.gabrielavelitch.com/img/site/electric.svg" style="width:70%; align-items: center">
+                <img src="https://www.gabrielavelitch.com/img/site/electric.svg" style="width:70%; display: inline; align-items: center">
               </span>
               <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
                 <strong>Electrical</strong>
