--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -362,6 +362,73 @@
     </div>
   </section>
 
+  <!-- List-->
+  <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX" id="features2-i">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper">
+            <div class="card-box align-center">
+              <span>
+                <img src="https://www.gabrielavelitch.com/img/site/1d.svg" style="width:70%; display: inline; align-items: center">
+              </span>
+              <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
+                <strong>Physical</strong>
+              </h4>
+              <p>
+              <ul class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
+                <li>Aerodynamic noise</li>
+                <li>Tier/road</li>
+                <br>
+                <br>
+              </ul>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper">
+            <div class="card-box align-center">
+              <span>
+                <img src="https://www.gabrielavelitch.com/img/site/2d.svg" style="width:70%; display: inline; align-items: center">
+              </span>
+              <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
+                <strong>Mechanical</strong>
+              </h4>
+              <p>
+              <ul class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
+                <li>ICE engine system</li>
+                <li>Air-conditioning</li>
+                <li>Doors opening</li>
+                <li>Gadget sounds</li>
+              </ul>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-3">
+          <div class="card-wrapper">
+            <div class="card-box align-center">
+              <span>
+                <img src="https://www.gabrielavelitch.com/img/site/3d.svg" style="width:70%; display: inline; align-items: center">
+              </span>
+              <h4 class="card-title align-center mbr-black mbr-fonts-style display-7">
+                <strong>Electrical</strong>
+              </h4>
+              <p>
+              <ul class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
+                <li>EV engine system</li>
+                <li>Battery cooling</li>
+                <br>
+                <br>
+              </ul>
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="ir">
