--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -363,7 +363,7 @@
   </section>
 
   <!-- List-->
-  <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX" id="features2-i">
+  <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX1" id="features2-i">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-md-6 col-lg-3">
