--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -391,7 +391,7 @@
                 <strong>Geometric</strong>
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
-
+                Propagation of the acoustic field is treated as if it were governed by rays
               </p>
             </div>
           </div>
@@ -406,7 +406,7 @@
                 <strong>Diffuse Field</strong>
               </h4>
               <p class="mbr-text card-text mbr-fonts-style display-7" style="text-align:left">
-
+                Acoustic field is evaluated through the hypothesis that after some time from the initial conditions, the energy has spread and distributed homogeneously throughout the space
               </p>
             </div>
           </div>
