--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -415,6 +415,16 @@
     </div>
   </section>
 
+  <!-- Image-->
+  <section data-bs-version="5.1" class="info1 cid-tX6pWBCRXL1 mbr-fullscreen" id="info1-g">
+    <div class="align-center container">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-8">
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="ir">
     <div class="container">
