--- a/pages/learn/automotive_sound_an_overview.html
+++ b/pages/learn/automotive_sound_an_overview.html
@@ -351,6 +351,17 @@
     </div>
   </section>
 
+  <!-- Title-->
+  <section data-bs-version="5.1" class="content4 cid-sYxSws07LF" id="soundscape_design_dev">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="title col-md-12 col-lg-10">
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong> Acoustic Analysis Methodology</strong></h4>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- List-->
   <section data-bs-version="5.1" class="features1 cid-tX6D4uUNCX1" id="features2-i">
     <div class="container">
